# LOGx

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DockerFile  GITHUB_SETUP_SUMMARY.md  LICENSE  Makefile  README.md  cache_remover.py  dashboard.py  pyproject.toml  requirements.txt  sample_log_data_set.csv  token.py  token_manager.py
.github/workflows/: ci.yml
Sample data/: sample logs.txt
demo_notebooks/: LOG_X_DEMO_IPYNB.ipynb
static/: style.css
templates/: about.html  auth.html  index.html  loader.html  report.html  visual.html
tests/: conftest.py  test_dashboard.py
